# p3bo_andrey

./: README.md  p3bo.py  pyproject.toml
flexs/: explorer.py  landscape.py  model.py  types.py
flexs/models/: keras_model.py  levensthein.py  noisy_abstract_model.py
flexs/optimizers/: adalead.py  genetic_algorithm.py  random.py
