[tool.poetry]
name = "p3bo"
version = "0.1.0"
description = ""
authors = ["Daniel Danciu <daniel@cradle.bio>"]

[tool.poetry.dependencies]
python = "^3.9"
editdistance = "^0.6.0"
torch = "^1.12.0"
numpy = "^1.23.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
